--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passport Photo Maker</title>
+    <title>Passport Photo Resizer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,12 +48,12 @@
 </head>
 <body>
     <div id="container">
-        <h1>Passport Photo Maker</h1>
+        <h1>Passport Photo Resizer</h1>
         <form id="uploadForm" action="/upload" method="POST" enctype="multipart/form-data">
             <input id="input" type="file" name="file" onchange="checkForFile()">
             <button id="upload" type="submit" disabled>Upload</button>
         </form>
-        <p>Image will be resized and edited according to <a href="https://www.ica.gov.sg/photo-guidelines" target="_blank">ICA's Photo Image Guidelines</a></p>
+        <p>Image will be resized according to <a href="https://www.ica.gov.sg/photo-guidelines" target="_blank">ICA's Photo Image Guidelines</a></p>
     </div>
 
     <script>
